--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -24,8 +24,8 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 spring.mail.host=smtp.naver.com
 spring.mail.port=465
-spring.mail.username=happyhousesk@naver.com
-spring.mail.password=happyhousesk7
+spring.mail.username=*
+spring.mail.password=*
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable=true
